manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheatsheets-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheatsheets-api
  template:
    metadata:
      labels:
        app: cheatsheets-api
    spec:
      containers:
        - name: cheatsheets-api
          image: localhost:5000/cheatsheets-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cheatsheets-data
---
apiVersion: v1
kind: Service
metadata:
  name: cheatsheets-api
  namespace: default
spec:
  selector:
    app: cheatsheets-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
