manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheatsheets-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheatsheets-web
  template:
    metadata:
      labels:
        app: cheatsheets-web
    spec:
      containers:
        - name: cheatsheets-web
          image: localhost:5000/cheatsheets-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cheatsheets-web
  namespace: default
spec:
  selector:
    app: cheatsheets-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
