manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheatsheets
  namespace: default
spec:
  rules:
    - host: cheatsheets.home
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cheatsheets-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cheatsheets-web
                port:
                  number: 8080
